tests/return/return.exp
Error ------------------------------------------------------------------------------------------ function_return.js:7:16

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   7| function f(x): number {
                     ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ function_return.js:23:3

Cannot return undefined because undefined [1] is incompatible with number [2]. [incompatible-return]

   function_return.js:23:3
   23|   return;
         ^^^^^^^ [1]

References:
   function_return.js:19:16
   19| function h(x): number {
                      ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- implicit.js:6:22

Cannot expect number as the return type of async function because number [1] is incompatible with implicitly-returned
`Promise`. [incompatible-return]

   6| async function g1(): number {}
                           ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------- implicit.js:7:30

Cannot expect `Promise` as the return type of async function because number [1] is incompatible with implicitly-returned
undefined in type argument `R` [2]. [incompatible-return]

   implicit.js:7:30
      7| async function g2(): Promise<number> {}
                                      ^^^^^^ [1]

References:
   <BUILTINS>/core.js:1812:24
   1812| declare class Promise<+R> {
                                ^ [2]


Error ------------------------------------------------------------------------------------------ implicit_void.js:246:16

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   246| function g1(): number { // Error
                       ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:253:16

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   253| function g2(): number { // Error
                       ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:261:16

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   261| function g3(): number { // Error
                       ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:269:16

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   269| function g4(): number { // Error
                       ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:277:16

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   277| function g5(): number { // Error
                       ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:286:16

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   286| function g6(): number { // Error
                       ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:294:16

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   294| function g7(): number { // Error
                       ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:307:16

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   307| function g8(): number { // Error
                       ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:320:16

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   320| function g9(): number { // Error
                       ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:335:17

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   335| function g10(): number { // Error
                        ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:341:17

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   341| function g11(): number { // Error
                        ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:348:17

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   348| function g12(): number { // Error
                        ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:364:17

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   364| function g13(): number { // Error
                        ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:369:17

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   369| function g14(): number { // Error
                        ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:376:17

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   376| function g15(): number { // Error
                        ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:383:17

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   383| function g16(): number { // Error
                        ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:390:26

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   390| function g17(x: Object): number { // Error
                                 ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:398:35

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   398| function g18(x: 'a' | 'b' | 'c'): number { // Error
                                          ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:407:18

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   407| function g19(x): number { // Error
                         ^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- void.js:12:2

Cannot cast `f(...)` to undefined because string [1] is incompatible with undefined [2]. [incompatible-cast]

   void.js:12:2
   12| (f(true): void); // error: string ~> void
        ^^^^^^^

References:
   void.js:8:12
    8|     return "nope";
                  ^^^^^^ [1]
   void.js:12:11
   12| (f(true): void); // error: string ~> void
                 ^^^^ [2]



Found 24 errors
